[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/game.gd" type="Script" id=1]
[ext_resource path="res://Playback/Playback.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/RepeatChoice/RepeatChoice.tscn" type="PackedScene" id=3]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playback" parent="." instance=ExtResource( 2 )]

[node name="RepeatChoice" parent="." instance=ExtResource( 3 )]

[connection signal="proceed_selected" from="RepeatChoice" to="." method="_on_RepeatChoice_proceed_selected"]
[connection signal="repeat_selected" from="RepeatChoice" to="." method="_on_RepeatChoice_repeat_selected"]
